[package]
name = "doas-rs"
version = "0.1.0"
authors = ["Aldo A. Avalos <99375833+aldorithms@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
# confy = "0.5.1"
human-panic = "1.2.2"
libc = "0.2.148"
# serde = "1.0.193"
# serde_derive = "1.0.193"
